--- a/app/src/main/res/layout/card_event.xml
+++ b/app/src/main/res/layout/card_event.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="@dimen/border_margin"
+        android:clipToPadding="false"
         android:paddingTop="12dp"
         android:paddingEnd="0dp">
 
