--- a/app/src/main/res/navigation/root_navigation.xml
+++ b/app/src/main/res/navigation/root_navigation.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,14 +8,44 @@
         android:id="@+id/bottomNavigationFragment"
         android:name="com.eltex.androidschool.fragments.BottomNavigationFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_bottom_navigation" >
+        tools:layout="@layout/fragment_bottom_navigation">
         <action
             android:id="@+id/action_bottomNavigationFragment_to_newEventFragment"
             app:destination="@id/newEventFragment" />
+        <action
+            android:id="@+id/action_bottomNavigationFragment_to_editEventFragment"
+            app:destination="@id/editEventFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/eventsFragment"
+        android:name="com.eltex.androidschool.fragments.EventsFragment"
+        android:label="Events"
+        tools:layout="@layout/fragment_events">
+        <action
+            android:id="@+id/action_eventsFragment_to_newEventFragment"
+            app:destination="@id/newEventFragment" />
+        <action
+            android:id="@+id/action_eventsFragment_to_editEventFragment"
+            app:destination="@id/editEventFragment" />
+    </fragment>
+
     <fragment
         android:id="@+id/newEventFragment"
         android:name="com.eltex.androidschool.fragments.NewEventFragment"
         tools:layout="@layout/fragment_new_event"
         android:label="@string/new_event" />
+
+    <fragment
+        android:id="@+id/editEventFragment"
+        android:name="com.eltex.androidschool.fragments.NewEventFragment"
+        android:label="Edit Event"
+        tools:layout="@layout/fragment_new_event">
+        <argument
+            android:name="ARG_ID"
+            app:argType="long" />
+        <argument
+            android:name="ARG_CONTENT"
+            app:argType="string" />
+    </fragment>
 </navigation>
